--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This project using NodeJS, express, pug, body-parser, nodemon, mongoose, and multer. Database is mongogDB.",
   "main": "index.js",
   "scripts": {
-    "start":"nodemon",
+    "start": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,6 +21,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "moment": "^2.24.0",
     "mongoose": "^5.9.7",
     "multer": "^1.4.2",
     "nodemon": "^2.0.2",
